--- a/src/Blog/CoreBundle/Resources/views/Post/index.html.twig
+++ b/src/Blog/CoreBundle/Resources/views/Post/index.html.twig
@@ -2,6 +2,15 @@
 
 {% block title %}{{ 'post.plural'| trans }}{% endblock %}
 
+{% block sidebar %}
+    <aside>
+        <h3>{{ 'post.latest' | trans }}</h3>
+        {% for post in latest %}
+            <p><a href="#">{{ post.title }}</a> </p>
+        {% endfor %}
+    </aside>
+{% endblock %}
+
 {% block section %}
     {% for post in posts %}
         {{ include('CoreBundle:Post:_post.html.twig', { post: post }) }}
