--- a/src/Blog/CoreBundle/Resources/views/Post/index.html.twig
+++ b/src/Blog/CoreBundle/Resources/views/Post/index.html.twig
@@ -6,7 +6,7 @@
     <aside>
         <h3>{{ 'post.latest' | trans }}</h3>
         {% for post in latest %}
-            <p><a href="#">{{ post.title }}</a> </p>
+            <p><a href="{{ path('blog_core_post_show', { slug: post.slug }) }}">{{ post.title }}</a> </p>
         {% endfor %}
     </aside>
 {% endblock %}
