--- a/src/Blog/CoreBundle/Resources/views/Post/show.html.twig
+++ b/src/Blog/CoreBundle/Resources/views/Post/show.html.twig
@@ -4,9 +4,10 @@
 
 {% block sidebar %}
     <aside>
-        <h3>{{ 'author' | trans }}</h3>
+        <h3>{{ 'author.title' | trans }}</h3>
         <p>
-            <a href="{{ path('blog_core_author_show', { slug: post.author.slug }) }}" title="{{ 'post.by.author' | trans({ '%name%': post.author.name }) }}">
+            <a href="{{ path('blog_core_author_show', { slug: post.author.slug }) }}"
+               title="{{ 'post.by.author' | trans({ '%name%': post.author.name }) }}">
                 {{ post.author.name }}
             </a>
         </p>
@@ -18,9 +19,20 @@
         <header>
             <h1>{{ post.title }}</h1>
             <p>
-                {{ 'post.on' | trans }}<time datetime="{{ post.createdAt | date('c') }}">{{ post.createdAt | date }}</time>
+                {{ 'post.on' | trans }}
+                <time datetime="{{ post.createdAt | date('c') }}">{{ post.createdAt | date }}</time>
             </p>
         </header>
         <p>{{ post.body | nl2br }}</p>
     </article>
+    <a id="comments"></a>
+    <h2>{{ 'comment.plural' | trans }}</h2>
+
+    {% for comment in post.comments %}
+        {{ include('CoreBundle:Post:_comment.html.twig') }}
+    {% endfor %}
+
+    <h4>{{ 'comment.write' | trans }}:</h4>
+    {{ form(form, { action: path('blog_core_post_createcomment', { slug: post.slug }) ~ '#comments' }) }}
+
 {% endblock %}
