Creating logout for the Admin bundle.

--- a/src/Blog/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Blog/AdminBundle/Resources/views/layout.html.twig
@@ -11,6 +11,9 @@
             <ul>
                 <li><a href="{{ path('blog_admin_post_index') }}">Posts</a></li>
                 <li><a href="{{ path('blog_admin_author_index') }}">Authors</a></li>
+                {% if app.user %}
+                    <li><a href="{{ path('blog_admin_security_logout') }}">Logout</a></li>
+                {% endif %}
             </ul>
         </nav>
     </header>
